--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-number-input",
-  "version": "0.0.0",
+  "version": "0.0.1-0",
   "description": "React number input Component",
   "homepage": "https://github.com/owner/project#readme",
   "bugs": {
