--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-number-input",
   "version": "0.0.1-0",
   "description": "React number input Component",
-  "homepage": "https://github.com/owner/project#readme",
+  "homepage": "https://github.com/BeroBurny/react-number-input",
   "bugs": {
     "url": "https://github.com/BeroBurny/react-number-input/issues",
     "email": "bero4net@gmail.com"
