--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-number-input",
+  "name": "@beroburny/react-number-input",
   "version": "0.0.1-0",
   "description": "React number input Component",
   "homepage": "https://github.com/BeroBurny/react-number-input",
