--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "scripts": {
     "build": "tsc -p .",
-    "develop": "tsc --watch"
+    "develop": "tsc --watch",
+    "test": "jest"
   },
   "keywords": [
     "react",
@@ -37,8 +38,11 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
+    "jest": "^24.9.0",
     "react": "^16.9.0",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
 }
